# virtual-startup

./: AGENTS.md  CHANGES.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEFERRED_FEATURES.md  DIAGNOSTIC_REPORT.md  EXAMPLE.jsx  FRONTEND_UPGRADE_PLAN.md  IMPROVEMENTS.md  PHASE10_COMPLETE.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TODO.md  WEBSOCKET_FIX.md  WEBSOCKET_INTEGRATION_SUMMARY.md  WEEK1_SUMMARY.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  example.tsx  main.py  pyproject.toml  start.bat  start.sh  virtual-startup-ui-recommendations.md
backend/: TESTING_SUMMARY.md  config.py  init_agents.py  pyproject.toml  pytest.ini  run.py  test_agents.py  test_api_integration.py  test_workflow_integration.py  tui_app.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  base_agent.py  config.py  creator.py  driver.py  generator.py  manager.py
backend/app/models/: __init__.py  agent.py  message.py  task.py  workflow.py
backend/app/routes/: agent_routes.py  stats_routes.py  workflow_routes.py
backend/app/services/: __init__.py  agent_service.py  rag_service.py  task_processor.py  workflow_orchestrator.py
backend/app/sockets/: __init__.py  chat_socket.py
backend/app/utils/: async_runner.py
backend/tests/: __init__.py  conftest.py  test_api_agents.py  test_api_workflows.py  test_edge_cases.py  test_integration.py  test_models.py  test_services.py  test_websockets.py
docs/: USER_GUIDE.md  (+5 more)
(+52 files in other folders)
